--- a/_config.yml
+++ b/_config.yml
@@ -80,4 +80,4 @@ theme: next
 deploy:
   type: git
   repo: https://github.com/yangqiong/yangqiong.github.io.git
-  branch: gh-pages
+  branch: master
