--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/yangqiong/yangqiong.github.io.git
+  repo: https://gh_token@github.com/yangqiong/yangqiong.github.io.git
   branch: master
