--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ highlight:
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
   theme: 'default'
-  line_number: false    # default false
+  line_number: true    # default false
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
